--- a/app/src/main/res/layout/activity_main_with_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_main_with_constraint_layout.xml
@@ -14,19 +14,19 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <Button
-        android:id="@+id/button_observable"
+        android:id="@+id/button_create_user"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="OBSERVABLE"
+        android:text="Register"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/guide_line_center"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_flowable"
+        android:id="@+id/button_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="FLOWABLE"
+        android:text="Login"
         app:layout_constraintBottom_toTopOf="@id/button_request"
         app:layout_constraintLeft_toRightOf="@id/guide_line_center"
         app:layout_constraintRight_toRightOf="parent"
@@ -40,7 +40,7 @@
         app:layout_constraintBottom_toTopOf="@+id/scroll_view_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_observable" />
+        app:layout_constraintTop_toBottomOf="@id/button_create_user" />
 
     <ScrollView
         android:id="@id/scroll_view_content"
