--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,35 +5,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="me.yeojoy.apimanager.MainActivity">
+    android:padding="16dp"
+    tools:context="me.yeojoy.apimanager.RegisterActivity">
+
+    <EditText
+        android:id="@+id/edit_text_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="@string/hint_register_username" />
+
+    <EditText
+        android:id="@+id/edit_text_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="@string/hint_register_password"
+        android:inputType="textPassword" />
+
+    <EditText
+        android:id="@+id/edit_text_confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="@string/hint_register_confirm_password"
+        android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button_create_user"
+        android:id="@+id/button_request_create_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register" />
 
-    <Button
-        android:id="@+id/button_flowable"
+    <TextView
+        android:id="@+id/text_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="FLOWABLE" />
-
-    <Button
-        android:id="@+id/button_request"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="REQUEST" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <TextView
-            android:id="@+id/text_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="left|top"
-            tools:text="Hello World!" />
-    </ScrollView>
+        android:layout_height="match_parent"
+        android:gravity="left|top"
+        tools:text="Hello World!" />
 
 </LinearLayout>
